[package]
name = "reggie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = { version = "0.50", features = ["chrono"] }
chrono = "0.4.24"
sha2 = "0.10.6"
base64ct = { version = "1.6.0", features = ["alloc"] }
clap = { version = "4.2.4", features = ["derive"] }
regex = "1.8.0"
