[package]
name = "reggie"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "fast Windows registry search tool"
homepage = "https://github.com/itchychips/reggie"
repository = "https://github.com/itchychips/reggie"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = { version = "0.50", features = ["chrono"] }
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
regex = "1.8.0"
indexmap = { version = "1.9.3", features = ["rayon"] }
rayon = "1.7.0"
